# maki

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  cancel.rs  client.rs  lib.rs  model.rs  permissions.rs  skill.rs  task_set.rs  tool.rs  types.rs
maki-agent/src/agent/: tool_dispatch.rs
maki-agent/src/mcp/: config.rs  mod.rs  protocol.rs  stdio.rs  transport.rs
maki-agent/src/prompts/: system.md
maki-agent/src/tools/: bash.rs  batch.rs  code_execution.rs  edit.rs  glob.rs  grep.rs  memory.rs  mod.rs  multiedit.rs  read.rs  registry.rs  task.rs  todowrite.md  todowrite.rs  webfetch.rs  websearch.rs  write.rs
maki-code-index/src/: lib.rs  rust.rs
maki-code-index/src/index/: bash.rs  c.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  lua.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  tests.rs  typescript.rs
maki-config/: Cargo.toml
maki-config/src/: lib.rs
maki-interpreter/src/: runner.rs
maki-lua/: Cargo.toml
maki-lua/src/api/: mod.rs  net.rs
maki-lua/src/api/treesitter/: language.rs  language_tree.rs  mod.rs  node.rs  query.rs  tree.rs
maki-lua/tests/: index_equivalence.rs  treesitter_compat.rs
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  lib.rs  model.rs  provider.rs  retry.rs  types.rs
maki-providers/src/providers/: anthropic.rs  dynamic.rs  google.rs  mistral.rs  mod.rs  synthetic.rs  zai.rs
maki-providers/src/providers/anthropic/: auth.rs  mod.rs
maki-storage/src/: auth.rs  lib.rs  model.rs  sessions.rs
maki-tool-macro/src/: lib.rs
maki-ui/: Cargo.toml
maki-ui/src/: animation.rs  app.rs  chat.rs  event_loop.rs  lib.rs  markdown.rs  mock.rs  render_worker.rs  selection.rs  splash.rs  storage_writer.rs  theme.rs  update.rs
maki-ui/src/agent/: agent_loop.rs  mod.rs  shared_queue.rs
maki-ui/src/app/: mod.rs  mouse.rs  queue.rs  tests.rs  view.rs
maki-ui/src/components/: btw_modal.rs  code_view.rs  command.rs  help_modal.rs  input.rs  keybindings.rs  list_picker.rs  mcp_picker.rs  memory_modal.rs  messages.rs  mod.rs  modal.rs  model_picker.rs  permission_prompt.rs  plan_form.rs  question_form.rs  queue_panel.rs  rewind_picker.rs  search_modal.rs  session_picker.rs  status_bar.rs  streaming_content.rs  todo_panel.rs  tool_display.rs
maki-ui/src/components/messages/: mod.rs
plugins/index/tests/: index_spec.lua
scripts/: cc.py  tbench_maki_agent.py
site/: index.html
site/docs/content/mcp/: _index.md
site/docs/content/quick-start/: _index.md
src/: main.rs  print.rs  update.rs
