[package]
name = "maki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maki"
path = "src/main.rs"

[dependencies]
maki-ui = { path = "maki-ui" }
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[workspace]
members = ["maki-agent", "maki-ui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
maki-agent = { path = "maki-agent" }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
