[package]
name = "maki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
