[package]
name = "maki-ui"
version.workspace = true
edition.workspace = true

[dependencies]
maki-agent = { workspace = true }
maki-providers = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
syntect = { workspace = true }
unicode-width = { workspace = true }
serde_json = { workspace = true }
arboard = { workspace = true }
jiff = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }

[features]
demo = []

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
